--- a/index.css
+++ b/index.css
@@ -157,3 +157,89 @@ header {
 nav p {
     font-size: 13px;
 }
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.solo-blanco {
+    color: white;
+}
+
+.principal {
+    display: flex;
+    flex-direction: column;
+}
+
+.seccion1 {
+    display: flex;
+    flex-direction: row;
+    gap: 7rem;
+    margin: 3rem;
+}
+
+.redes {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.logos {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+}
+
+.miembros {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+.linea {
+    border: 1px solid rgb(196, 196, 196);
+    margin: 0 3rem;
+}
+
+.seccion2 {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+    margin: 3rem;
+}
+
+.enlaces {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    margin-right: -4rem;
+    margin-top: -1rem;
+}
+
+.pie-de-pagina {
+    width: fit-content;
+    background-color: black;
+    color: rgb(184, 184, 184);
+    justify-content: center;
+    align-items: end;
+    position: relative;
+    left: 20rem;
+}
+.coso {
+    display: flex;
+    flex-direction: column;
+    gap: -2rem;
+}
+
+.pie {
+    margin-top: -2rem;
+}
