Corregido Producto Final de Programación

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ header {
     gap: 15px;
     align-items: center;
     position: relative;
-    left: 19rem;
+    left: 11.9rem;
 }
 
 .izquierdo img {
@@ -63,7 +63,7 @@ header {
     gap: 15px;
     align-items: center;
     position: relative;
-    right: 21rem;
+    right: 13.9rem;
 }
 
 .derecha img {
@@ -96,10 +96,11 @@ header {
 .superior {
     width: 100%;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     padding-bottom: 10px;
 }
+
 .jojo {
     width: 100%;
     margin-top: 10px;
@@ -149,9 +150,8 @@ header {
     padding-left: 10px;
 }
 
--fecha {
+.fecha {
     position: relative;
-    top: 10rem;
 }
 
 nav p {
@@ -162,11 +162,9 @@ nav p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.solo-blanco {
+b {
     color: white;
 }
-
 .principal {
     display: flex;
     flex-direction: column;
@@ -175,8 +173,8 @@ nav p {
 .seccion1 {
     display: flex;
     flex-direction: row;
-    gap: 7rem;
-    margin: 3rem;
+    gap: 3rem;
+    padding: 3rem;
 }
 
 .redes {
@@ -186,11 +184,6 @@ nav p {
     align-items: center;
 }
 
-.logos {
-    display: flex;
-    flex-direction: row;
-    gap: 1.5rem;
-}
 
 .miembros {
     display: flex;
@@ -213,15 +206,15 @@ nav p {
 }
 
 .enlaces {
-    display: flex;
+    display:flex;
     flex-direction: column;
-    width: max-content;
+    font-weight:bold;
 }
 
 .logo {
     display: flex;
     justify-content: center;
-    margin-right: -4rem;
+    margin-right: 4rem;
     margin-top: -1rem;
 }
 
@@ -230,16 +223,25 @@ nav p {
     background-color: black;
     color: rgb(184, 184, 184);
     justify-content: center;
-    align-items: end;
     position: relative;
-    left: 20rem;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
 }
+
 .coso {
     display: flex;
     flex-direction: column;
-    gap: -2rem;
 }
 
-.pie {
-    margin-top: -2rem;
+.sociales h6 {
+    padding-top: 1rem
+}
+
+.sociales {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    position: relative;
+    top: -1rem;
 }
